--- a/streamline/src/styles.css
+++ b/streamline/src/styles.css
@@ -24,6 +24,6 @@
 }
 
 span {
-
-    background-color: red;
+    background-color: darkslategray;
+    color: white;
 }
